Added redirect for github pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://jiviteshjain.github.io/html/index.html" />
+<meta http-equiv="refresh" content="0; url=https://jiviteshjain.github.io/my-website/html/index.html" />
