--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>@jiviteshjain</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
