Modified index.html:welcome-section, improved responsiveness

--- a/html/index.html
+++ b/html/index.html
@@ -15,9 +15,11 @@
     <body class="home">
         
         <div id="welcome">
-            <span id="me">me</span>
-            <br>
             <span id="name"><span id="at">@</span>jivitesh<span id="jain">jain</span></span>
+            <br>
+            <span id="me">Hi, I'm Jivitesh.</span>
+            <br>
+            <span id="desc">Dexter, except with a paintbrush.</span>
 
             <a href="#" class="scroll-down" address="true"></a>
         </div>
