Content on index.html

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Catamaran:900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i" rel="stylesheet">
         <link rel="icon" href="../img/icon.png" type="image/x-icon">
         <link type="text/css" rel="stylesheet" href="../css/css.css">
     </head>
@@ -19,7 +20,7 @@
             <br>
             <span id="me">Hi, I'm Jivitesh.</span>
             <br>
-            <span id="desc">Dexter, except with a paintbrush.</span>
+            <span id="desc">Almost Dexter, except with a paintbrush.</span>
 
             <a href="#" class="scroll-down" address="true"></a>
         </div>
@@ -39,12 +40,11 @@
 
         <div class="textsection whitestyle">
             <p class="texthead">Say Hi</p>
-            <p class="textsubhead">Moderator:</p>
             <div class="photo">
                 <img class="imginbw" src="../img/me-1.jpg">
                 <p class="textbody" class="textwithimg">
-                    Meet Jivitesh.<br>
-                    He's a 19 year old undergraduate studying Computer Science and Engineering at the International Institute of Information Technology, Hyderabad. He hails from Delhi, and is passionate about, <i>inter alia,</i> art, learning, technology and the human ability and will to create and empower.
+                    I'm a currently a freshman studying Computer Science and Engineering at the International Institute of Information Technology, Hyderabad. I grew up in New Delhi, where I did my schooling from Amity International School.<br>
+                    I'm passionate about, <i>inter alia,</i> technology, learning, art and the human ability and will to create and empower.
                 </p>
             </div>
         </div>
@@ -63,25 +63,32 @@
                 <p class="texthead">Things I <span class="emoji">❤️</span> doing</p>
                 <p class="textsubhead">...when not compelled to do something else.</p>
                 <div class="photo">
-                        <img class="imginbw" src="../img/art.jpg">
-                        <p class="textbody" class="textwithimg">
-                            My biggest passion is learning, including learning to learn. Obsessed with technology as much as I am, I love learning to code - just because it empowers you to solve so many challenges and real-world problems effectively. (Also why I decided to pursue my bachelor's in computer science.) Apart from that, I like studying physics - from the physics behind the gorgeous northern lights to the physics that runs our everyday lives.
-                            <br>
-                            Next on my list of passions is Art. With a craving for sketching and painting, my notebooks are often <i>adorned</i> with doodles and my sketchbook with pencil-shadings, sketches and paintings.<i> Although rarely, I also tend to target walls.</i>
-                            <br>
-                            Playing badminton and learning about the world's languages and their impact on our civilisation are some other things that interest and de-stress <i>(this sounds eerily and ironically similar to 'distress')</i> me.
-                        </p>
-                    </div>
+                    <img class="imginbw" src="../img/art.jpg">
+                    <p class="textbody textwithimg">
+                        My biggest passion is learning, including learning to learn.<br>
+                        Obsessed with technology as much as I am, I love programming (and problem-solving) - just because it empowers me to solve so many real-world challenges effectively. (Also why I decided to pursue my bachelor's in computer science.)<br>
+                        Apart from that, I like studying physics - from the physics behind the gorgeous northern lights to the physics that runs our everyday lives.
+                        <br><br>
+                        Next on my list of passions is Art. With a craving for sketching and painting, my notebooks are often <i>adorned</i> with doodles and my sketchbook with pencil-shadings, sketches and paintings.<i> Although rarely, I also tend to target walls.</i><br>
+                        As of now, I'm trying to diversify into the realm of digital art, of whose enormous potential I'm always in awe. Web design and creating illustrations and digital paintings are areas that intrigue me, and I would like to be proficient in. 
+                        <br><br>
+                        When I'm holding neither the pen, mouse, nor the paintbrush, I can be found playing badminton, reading a novel (my favourite reads: Agatha Christie's <i>And Then There Were None</i>, Dan Brown's <i>Digital Fortress</i> and George Orwell's <i>Animal Farm</i>) or devouring a <i>paneer</i>-containing dish. Apart from this, learning about the world's languages and their impact on our civilisation is another thing that interests and de-stresses <i>(this sounds eerily and ironically similar to 'distresses')</i> me.
+                    </p>
+                </div>
+                <p class="quote">"The purpose of art is washing the dust of daily life off our souls." - Pablo Picasso</p>
         </div>
 
-        <div class="textsection color">
+        <div class="textsection largecontent color">
             <p class="texthead">An experience</p>
             <p class="textsubhead">...that changed me as a person.</p>
-            <p class="textbody">
-                It was my fifth year studying German when I appeared on the <i>Fit in Deutsch 2 (A2)</i> examination conducted by the Goethe Institute. My happiness knew no bounds and I was still partly dazed by the clouds of disbelief as I heard my name being called off the list of candidates selected for an all-expenses-paid trip to Germany.<br>
-                Once there, we were enrolled in <i>Jugendkurs Aachen 2016</i> - a German Language Course - along with other people from all around the world. It was three weeks of intensive learning, great fun, amazing experiences and memories to cherish.<br>
-                It was on the last day that, standing by the waters of the Rhine, I could instrospect upon the impact of the course on me - it was not merely a prize, and had not just taught me the German Language - but it had made me independent and given me the exposure and confidence necessary to face the world. It had played its small part in transforming this child into a youth - justifying itself as a <i>Jugendkurs</i>.
-            </p>
+            <div class="photo">
+                <img src="../img/germany.jpg" class="imginbw">
+                <p class="textbody textwithimg">
+                    It was my fifth year studying German when I appeared on the <i>Fit in Deutsch 2 (A2)</i> examination conducted by the Goethe Institute. With ears that refused to believe, I heard my name being called off the list of candidates selected for an all-expenses-paid trip to Germany.<br>
+                    Once there, we were enrolled in <i>Jugendkurs Aachen 2016</i> - a German Language Youth Course. It was three weeks of intensive learning, great fun, amazing experiences and memories to cherish - all with batchmates from all parts of the world, who added in different ideas, prejudices and idologies to the mix. From participating in long and charged discussions in a language I could hardly call myself familiar with then, to exploring the German culture and heritage by walking through the town, listening to the stories the pavement stones had to tell - the course made us learn the language by making us use it.<br><br>
+                    It was on the last day that, standing by the waters of the Rhine, I could instrospect upon the impact of the course on me - it was not merely a reward, and had not just taught me the German Language - but it had made me independent and given me the exposure and confidence necessary to face the world. It had played its small part in transforming this child into a youth - justifying itself as a <i>Jugendkurs</i>.
+                </p>
+        </div>
         </div>
 
         <div class="textsection whitestyle">
