Index.html improvements

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i" rel="stylesheet">
         <link rel="icon" href="../img/icon.png" type="image/x-icon">
         <link type="text/css" rel="stylesheet" href="../css/css.css">
+        <link type="text/css" rel="stylesheet" href="../PhotoSwipe/photoswipe.css">
+        <link type="text/css" rel="stylesheet" href="../PhotoSwipe/default-skin/default-skin.css">
     </head>
     
     <body class="home">
@@ -91,7 +93,7 @@
         </div>
         </div>
 
-        <div class="textsection whitestyle">
+        <!-- <div class="textsection whitestyle">
             <p class="texthead">My friends</p>
             <p class="textsubhead">...and other animals.</p>
             <div class="slidecontainer">
@@ -136,7 +138,8 @@
                 <span class="slidedot" onclick="currentSlide(4)"></span>
                 <span class="slidedot" onclick="currentSlide(5)"></span>
             </div>
-        </div>
+        </div> -->
+       
 
         <div class="footer">
              <span id="bottext">
@@ -151,5 +154,8 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="../js/js.js"></script>
+        <script src="../PhotoSwipe/photoswipe.min.js"></script>
+        <script src="../PhotoSwipe/photoswipe-ui-default.min.js"></script>
+        <script src="../js/photoswipe-run.js"></script>
     </body>
 </html>
