index.html overhaul

--- a/html/index.html
+++ b/html/index.html
@@ -93,7 +93,7 @@
         </div>
         </div>
 
-        <!-- <div class="textsection whitestyle">
+        <div class="textsection whitestyle">
             <p class="texthead">My friends</p>
             <p class="textsubhead">...and other animals.</p>
             <div class="slidecontainer">
@@ -138,7 +138,7 @@
                 <span class="slidedot" onclick="currentSlide(4)"></span>
                 <span class="slidedot" onclick="currentSlide(5)"></span>
             </div>
-        </div> -->
+        </div>
        
 
         <div class="footer">
