Homepage almost done, only picture gallery left

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Catamaran:900" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i&display=swap" rel="stylesheet">
         <link rel="icon" href="../img/icon.png" type="image/x-icon">
         <link type="text/css" rel="stylesheet" href="../css/css.css">
         <link type="text/css" rel="stylesheet" href="../PhotoSwipe/photoswipe.css">
@@ -22,7 +23,7 @@
             <br>
             <span id="me">Hi, I'm Jivitesh.</span>
             <br>
-            <span id="desc">Almost Dexter, except with a paintbrush.</span>
+            <span id="desc">Dexter, except with a paintbrush.</span>
 
             <a href="#" class="scroll-down" address="true"></a>
         </div>
@@ -139,7 +140,25 @@
                 <span class="slidedot" onclick="currentSlide(5)"></span>
             </div>
         </div>
-       
+
+        <div id="contactus" class="textsection connect">
+            <p class="texthead">Let's talk</p>
+            <p class="textbody background-fade">
+                In today's connected world, it isn't hard to reach out, right?<br>
+                Send an email, ping me on facebook, or best, fill out this simple form and I'll get back to you, usually within a day.<br>
+                Bonus: check out my projects on GitHub.
+            </p>
+            <div class="contacticons">
+                <a onclick="showTypeform()" title="Contact form"><i class="fas fa-sticky-note"></i></a>
+                <a href="#" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i class="fab fa-facebook"></i></a>
+                <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub account"><i class="fab fa-github"></i></a>
+            </div>
+        </div>
+        <div id="typeform-parent" class="textsection whitestyle">
+            <div class="typeform-widget" data-url="https://jivitesh.typeform.com/to/N0NuvQ" data-transparency="0" data-hide-headers=true style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        </div>
 
         <div class="footer">
              <span id="bottext">
@@ -156,6 +175,6 @@
         <script src="../js/js.js"></script>
         <script src="../PhotoSwipe/photoswipe.min.js"></script>
         <script src="../PhotoSwipe/photoswipe-ui-default.min.js"></script>
-        <script src="../js/photoswipe-run.js"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </body>
 </html>
