--- a/html/index.html
+++ b/html/index.html
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div id="typeform-parent" class="textsection whitestyle">
-            <div class="typeform-widget" data-url="https://jivitesh.typeform.com/to/N0NuvQ?typeform-welcome=0" data-transparency="0" data-hide-headers=true style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+            <div class="typeform-widget" data-url="https://jivitesh.typeform.com/to/N0NuvQ" data-transparency="0" data-hide-headers=true style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
 
         <div class="footer">
