Removed form, added resume

--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
             
             <a class="navlink hover" href="strengths.html">My Strengths</a>
             
-            <a class="navlink hover"href="form.html">You and Me</a>
+            <a class="navlink hover"href="../resume-jiviteshjain.pdf" download="resume-jiviteshjain">R&eacute;sum&eacute;</a>
         </div>
 
 
