Redone talk section

--- a/html/index.html
+++ b/html/index.html
@@ -142,11 +142,10 @@
         </div>
 
         <div id="contactus" class="textsection connect">
-            <p class="texthead background-fade">Let's talk</p>
-            <p class="textbody background-fade">
-                In today's connected world, it isn't hard to reach out, right?<br>
-                Send an email, ping me on facebook, or best, fill out this simple form and I'll get back to you, usually within a day.<br>
-                Bonus: check out my projects on GitHub.
+            <p class="texthead">Let's talk</p>
+            <p class="quote">"If you want to go fast, go alone. If you want to go far, go with others."</p>
+            <p class="textbody">
+                Whether you believe we'll make a great team, or you just share my interests, you can drop me an email, ping me on Facebook, connect with me on LinkedIn, or simply click the icon below to fill out a short-and-sweet form and I'll get back to you, usually within a day.
             </p>
             <div class="contacticons">
                 <a onclick="showTypeform()" title="Contact form"><i class="fas fa-sticky-note"></i></a>
@@ -161,12 +160,16 @@
         </div>
 
         <div class="footer">
-             <span id="bottext">
+            <span id="bottext">
                 <a href="index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
             </span>
-            <a class="social" id="mail" href="mailto:jiviteshjain@outlook.com"></a>
-            <a class="social" id="github" href="https://www.github.com/jiviteshjain" target="_blank"></a>
-            <a class="social" id="facebook" href="https://www.facebook.com/jivitesh.jain.121" target="_blank"></a>
+            <div class="contacticons">
+                <a onclick="showTypeform()" title="Contact form"><i class="fas fa-sticky-note"></i></a>
+                <a href="#" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i class="fab fa-facebook"></i></a>
+                <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub account"><i class="fab fa-github"></i></a>
+            </div>
         </div>
 
         <!-- <div class="test"></div> -->
