--- a/html/index.html
+++ b/html/index.html
@@ -163,8 +163,8 @@
             <span id="bottext">
                 <a href="index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
             </span>
-            <div class="contacticons">
-                <a onclick="showTypeform()" title="Contact form"><i class="fas fa-sticky-note"></i></a>
+            <div class="footericons">
+                <a title="Contact form" class="typeform-share" href="https://jivitesh.typeform.com/to/N0NuvQ" data-mode="popup" data-hide-headers=true data-submit-close-delay="0" target="_blank"><i class="fas fa-sticky-note"></i></a><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                 <a href="#" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i class="fab fa-facebook"></i></a>
                 <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
