--- a/html/strengths.html
+++ b/html/strengths.html
@@ -22,7 +22,7 @@
             
             <a class="navlink cur" href="strengths.html">My Strengths</a>
             
-            <a class="navlink hover"href="../resume-jiviteshjain.pdf" download="resume-jiviteshjain">R&eacute;sum&eacute;</a>
+            <a class="navlink hover"href="../resume-jiviteshjain.pdf" download="resume-jiviteshjain">My R&eacute;sum&eacute;</a>
         </div>
 
         <div class="textsection color">
