Trying caption, doesn't work

--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,7 @@
             <p class="textsubhead">...and other animals.</p>
 
             <div class="main-carousel">
-                <div class="carousel-cell">
+                <div class="carousel-cell" data-cap="Learning, growing, falling and getting up; all with an element of mischief and fun.">
                     <img src="../img/slide-1.jpg" alt="Learning, growing, falling and getting up; all with an element of mischief and fun.">
                 </div>
                 <div class="carousel-cell">
@@ -117,6 +117,7 @@
                     <img src="../img/slide-5.jpg" alt="Another one.">
                 </div>
             </div>
+            <!-- <p class="caption">&nbsp;</p> -->
 
             <!-- <div class="slidecontainer">
                 <div class="slideimage slidefade">
