Basic fixes to strengths page

--- a/html/strengths.html
+++ b/html/strengths.html
@@ -8,6 +8,8 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Catamaran:900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i&display=swap" rel="stylesheet">
         <link rel="icon" href="../img/icon.png" type="image/x-icon">
         <link type="text/css" rel="stylesheet" href="../css/css.css">
     </head>
@@ -35,22 +37,24 @@
         </div>
 
         <div class="textsection whitestyle">
-                <p class="texthead">My skills</p>
-                <p class="textbody">
-                    In the field of computer science, I'm confident about my abilities in the languages/technologies of C, C++, HTML, CSS, Javascript and shell scripting.<br>
-                    Apart from that, I'm an avid debater, writer and an enthusiastic painter.<br>
-                    And of course, I am, and always will be, a learner.
-                </p>
-            </div>
+            <p class="texthead">My skills</p>
+            <p class="textbody">
+                In the field of computer science, I'm confident about my abilities in the languages/technologies of C, C++, HTML, CSS, Javascript and shell scripting.<br>
+                Apart from that, I'm an avid debater, writer and an enthusiastic painter.<br>
+                And of course, I am, and always will be, a learner.
+            </p>
+        </div>
         <div class="footer">
-            
             <span id="bottext">
                 <a href="index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
             </span>
-            
-            <a class="social" id="mail" href="mailto:jiviteshjain@outlook.com"></a>
-            <a class="social" id="github" href="https://www.github.com/jiviteshjain" target="_blank"></a>
-            <a class="social" id="facebook" href="https://www.facebook.com/jivitesh.jain.121" target="_blank"></a>
+            <div class="footericons">
+                <a title="Contact form" class="typeform-share" href="https://jivitesh.typeform.com/to/N0NuvQ" data-mode="popup" data-hide-headers=true data-submit-close-delay="0" target="_blank"><i class="fas fa-sticky-note"></i></a><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+                <a href="#" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i class="fab fa-facebook"></i></a>
+                <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.github.com/jiviteshjain" target="_blank" title="GitHub account"><i class="fab fa-github"></i></a>
+            </div>
         </div>
 
 
@@ -58,5 +62,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="../js/js.js"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </body>
 </html>
