--- a/html/strengths.html
+++ b/html/strengths.html
@@ -59,7 +59,7 @@
         <p class="texthead">What I have been up to</p>
         <p class="textbody">
             Here's a little list, or <i>bowl</i> of my <span class="greentext">skills</span>, my <span
-                class="pinktext">achievements</span> in high school and freshman year and <span
+                class="pinktext">achievements</span> in high school and freshman year and my <span
                 class="greytext">involvements</span> during the same period.
         </p>
         <div id="sketch-holder"></div>
