--- a/html/strengths.html
+++ b/html/strengths.html
@@ -65,8 +65,7 @@
         <div id="sketch-holder"></div>
     </div>
 
-
-
+    <div id="footer-animation"></div>
     <div class="footer">
         <span id="bottext">
             <a href="index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
@@ -113,6 +112,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
     <script src="../js/sketch.js"></script>
+    <script src="../js/sketch-foot.js"></script>
 </body>
 
 </html>
