Adding linkedin link

--- a/html/strengths.html
+++ b/html/strengths.html
@@ -91,7 +91,7 @@
                     }
                 })()
             </script>
-            <a href="#" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jiviteshjain" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i
                     class="fab fa-facebook"></i></a>
             <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
