--- a/html/index.html
+++ b/html/index.html
@@ -206,7 +206,7 @@
         </p>
         <div class="contacticons">
             <a onclick="showTypeform()" title="Contact form"><i class="fas fa-sticky-note"></i></a>
-            <a href="https://www.linkedin.com/in/jiviteshjain" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i
                     class="fab fa-facebook"></i></a>
             <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
@@ -261,7 +261,7 @@
                     }
                 })()
             </script>
-            <a href="https://www.linkedin.com/in/jiviteshjain" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jiviteshjain" target="_blank" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.facebook.com/jivitesh.jain.121" target="_blank" title="Facebook Profile"><i
                     class="fab fa-facebook"></i></a>
             <a href="mailto:jiviteshjain@outlook.com" title="Email"><i class="fas fa-envelope"></i></a>
