--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="css/css.css">
+    <link rel="icon" href="/web/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/web/css/css.css">
 </head>
 
 <body class="push-down">
@@ -22,16 +22,16 @@
             <a href="#"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
         </span>
 
-        <a href="html/index.html" class="navlink hover">Icebreaking</a>
+        <a href="/web/html/index.html" class="navlink hover">Icebreaking</a>
 
-        <a class="navlink cur" href="html/strengths.html">My Strengths</a>
+        <a class="navlink cur" href="/web/html/strengths.html">My Strengths</a>
 
-        <a class="navlink hover" href="resume-jiviteshjain.pdf" download="resume-jiviteshjain">My
+        <a class="navlink hover" href="/web/resume-jiviteshjain.pdf" download="resume-jiviteshjain">My
             R&eacute;sum&eacute;</a>
     </div>
 
     <div class="textsection whitestyle div-404">
-        <img src="img/undraw-404.svg" class="img-404">
+        <img src="/web/img/undraw-404.svg" class="img-404">
         <div class="text-404">
             <p class="head-404 texthead">
                 This is not a 404.
@@ -47,7 +47,7 @@
     <div id="footer-animation"></div>
     <div class="footer">
         <span id="bottext">
-            <a href="index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
+            <a href="/web/index.html"><span id="navat">@</span>jivitesh<span id="navjain">jain</span></a>
         </span>
         <div class="footericons">
             <a title="Contact form" class="typeform-share" href="https://jivitesh.typeform.com/to/N0NuvQ"
@@ -91,7 +91,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
-    <script src="js/sketch-foot.js"></script>
+    <script src="/web/js/sketch-foot.js"></script>
 </body>
 
 </html>
