--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 
         <a href="/web/html/index.html" class="navlink hover">Icebreaking</a>
 
-        <a class="navlink cur" href="/web/html/strengths.html">My Strengths</a>
+        <a class="navlink hover" href="/web/html/strengths.html">My Strengths</a>
 
         <a class="navlink hover" href="/web/resume-jiviteshjain.pdf" download="resume-jiviteshjain">My
             R&eacute;sum&eacute;</a>
