--- a/404.html
+++ b/404.html
@@ -42,6 +42,18 @@
         </div>
     </div>
 
+    <div class="textsection spacestyle">
+        <p class="texthead">You seem to be lost in space</p>
+        <p class="textsubhead">I'll help</p>
+        <p class="textbody">
+            Here are some nearby* places you might wanna visit:
+        </p>
+        <p class="textbody" id="content-urls-404"></p>
+        <p class="textbody">
+            <i>*sorted by their edit distance to the address you entered</i>
+        </p>
+    </div>
+
     
 
     <div id="footer-animation"></div>
@@ -84,7 +96,8 @@
     <!-- <div class="test"></div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/js.js"></script>
+    <script src="/web/js/js.js"></script>
+    <script src="/web/js/404.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
