--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="textsection whitestyle div-404">
-        <img src="/web/img/undraw-404.svg" class="img-404">
+        <img src="/web/img/rocket.svg" class="img-404">
         <div class="text-404">
             <p class="head-404 texthead">
                 This is not a 404.
@@ -44,7 +44,6 @@
 
     <div class="textsection spacestyle">
         <p class="texthead">You seem to be lost in space</p>
-        <p class="textsubhead">I'll help</p>
         <p class="textbody">
             Here are some nearby* places you might wanna visit:
         </p>
