--- a/404.html
+++ b/404.html
@@ -42,8 +42,9 @@
         </div>
     </div>
 
-    <div class="textsection spacestyle">
-        <p class="texthead">You seem to be lost in space</p>
+    <div class="textsection whitestyle">
+        <p class="texthead">Lights will guide you home...</p>
+        <p class="textsubhead">...and I will try to fix this</p>
         <p class="textbody">
             Here are some nearby* places you might wanna visit:
         </p>
