--- a/404.html
+++ b/404.html
@@ -43,8 +43,8 @@
     </div>
 
     <div class="textsection whitestyle">
-        <p class="texthead">Lights will guide you home...</p>
-        <p class="textsubhead">...and I will try to fix this</p>
+        <p class="texthead">Lights will guide you home</p>
+        <p class="textsubhead">And I will try to fix this</p>
         <p class="textbody">
             Here are some nearby* places you might wanna visit:
         </p>
@@ -97,14 +97,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/web/js/js.js"></script>
-    <script src="/web/js/404.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.min.js"></script>
     <script src="/web/js/sketch-foot.js"></script>
+    <script src="/web/js/404.js"></script>
 </body>
 
 </html>
