--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <link type="text/css" rel="stylesheet" href="/web/css/css.css">
 </head>
 
-<body class="push-down">
+<body>
     <div class="nav sticky">
 
         <span class="navlink" id="navtext">
@@ -97,7 +97,7 @@
     <!-- <div class="test"></div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script src="/web/js/js.js"></script> -->
+    <script src="/web/js/js.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
