--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
             <p class="head-404 texthead">
                 This is not a 404.
             </p>
-            <p class="content-404">
+            <p class="textbody">
                 It could be a ghost, or a yeti, or Lord Canterville's soul. It could be the Ancient Mariner, or his Albatross, or any one of those dreaded Hitchhiking Ghosts. It could be one of the Fantastic Four, or one among the Famous Five, or each one of those Secret Seven. Maybe it is Scooby-Doo, or that shabby master of his, or <i>jinkies,</i> is it Velma? I think it is Alice, or Bob, or whichever of them won the game.<br>
                 Whatever it is, it is not a 404.
             </p>
