--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
         <div class="photo">
             <img class="imginbw" src="../img/me-1.jpg">
             <p class="textbody" class="textwithimg">
-                I'm a currently a freshman studying Computer Science and Engineering at the International Institute of
+                I'm a currently a sophomore studying Computer Science and Engineering at the International Institute of
                 Information Technology, Hyderabad. I grew up in New Delhi, where I did my schooling from Amity
                 International School.<br>
                 I'm passionate about, <i>inter alia,</i> technology, learning, art and the human ability and will to
@@ -150,50 +150,6 @@
                 <img src="../img/slide-5.jpg" alt="Another one.">
             </div>
         </div>
-        <!-- <p class="caption">&nbsp;</p> -->
-
-        <!-- <div class="slidecontainer">
-                <div class="slideimage slidefade">
-                    <div class="slidenum">1/5</div>
-                    <img src="../img/slide-1.jpg" class="slidepic" onclick="plusSlides(1)">
-                    <div class="slidecaption">Learning, growing, falling and getting up; all with an element of mischief and fun.</div>
-                </div>
-
-                <div class="slideimage slidefade">
-                    <div class="slidenum">2/5</div>
-                    <img src="../img/slide-2.jpg" class="slidepic" onclick="plusSlides(1)">
-                    <div class="slidecaption">Best friends forever.</div>
-                </div>
-
-                <div class="slideimage slidefade">
-                    <div class="slidenum">3/5</div>
-                    <img src="../img/slide-3.jpg" class="slidepic" onclick="plusSlides(1)">
-                    <div class="slidecaption">Memories of some amazing time spent in a land far away.</div>
-                </div>
-
-                <div class="slideimage slidefade">
-                    <div class="slidenum">4/5</div>
-                    <img src="../img/slide-4.jpg" class="slidepic" onclick="plusSlides(1)">
-                    <div class="slidecaption">Here come the 'other animals'.</div>
-                </div>
-
-                <div class="slideimage slidefade">
-                    <div class="slidenum">5/5</div>
-                    <img src="../img/slide-5.jpg" class="slidepic" onclick="plusSlides(1)">
-                    <div class="slidecaption">Another one.</div>
-                </div>
-
-                <a class="slideprev" onclick="plusSlides(-1)">&#10094</a>
-                <a class="slidenext" onclick="plusSlides(1)">&#10095</a>
-            </div>
-            <br>
-            <div class="slidestatus">
-                <span class="slidedot" onclick="currentSlide(1)"></span>
-                <span class="slidedot" onclick="currentSlide(2)"></span>
-                <span class="slidedot" onclick="currentSlide(3)"></span>
-                <span class="slidedot" onclick="currentSlide(4)"></span>
-                <span class="slidedot" onclick="currentSlide(5)"></span>
-            </div> -->
     </div>
 
     <div id="contactus" class="textsection connect">
